--- a/api/package.json
+++ b/api/package.json
@@ -3,10 +3,14 @@
   "private": true,
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "format": "prettier --write .",
+    "lint": "eslint ./src && prettier --check ."
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "eslint": "^8.46.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.0"
   },
   "dependencies": {
     "amqplib": "^0.10.3",
