--- a/crawler/package.json
+++ b/crawler/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "format": "prettier --write .",
+    "lint": "eslint ./src && prettier --check ."
   },
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "eslint": "^8.46.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.0"
   }
 }
