--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,10 @@ services:
       - '3000:3000'
     depends_on:
       - rabbitmq
+      - elasticsearch
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
+    ports:
+      - '9200:9200'
+    environment:
+      - discovery.type=single-node
