--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,18 @@ services:
     volumes:
       - api_node_modules:/app/node_modules
       - ./api:/app
+  frontend:
+    command: ["npm", "run", "dev"]
+    build:
+      # only build first stage
+      target: installer
+    ports:
+      - '4000:4000'
+    volumes:
+      - frontend_node_modules:/app/node_modules
+      - ./frontend:/app
 
 volumes:
   crawler_node_modules:
   api_node_modules:
+  frontend_node_modules:
