--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.10.0",
     "amqplib": "^0.10.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
