--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - rabbitmq
+      - redis
   api:
     build:
       context: ./api
@@ -33,3 +34,7 @@ services:
       - '9200:9200'
     environment:
       - discovery.type=single-node
+  redis:
+    image: redis:7.0.12-alpine
+    ports:
+      - '6379:6379'
