--- a/crawler/package.json
+++ b/crawler/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "eslint": "^8.46.0",
