Use 2 dockerfiles for the frontend
Dev image works with "chown" setup, but prod image doesn't.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,10 +13,9 @@ services:
   frontend:
     # work around: run as root to avoid permission issues
     # user: "0"
-    command: ["npm", "run", "dev"]
     build:
       # only build first stage
-      target: installer
+      dockerfile: Dockerfile.dev
     ports:
       - '4000:4000'
     volumes:
