--- a/api/package.json
+++ b/api/package.json
@@ -5,10 +5,12 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "format": "prettier --write .",
-    "lint": "eslint ./src && prettier --check ."
+    "lint": "eslint ./src && prettier --check .",
+    "test": "NODE_ENV=test jest"
   },
   "devDependencies": {
     "eslint": "^8.46.0",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0"
   },
