--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
     "eslint": "^8.46.0",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.10.0",
