--- a/crawler/package.json
+++ b/crawler/package.json
@@ -5,7 +5,8 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "format": "prettier --write .",
-    "lint": "eslint ./src && prettier --check ."
+    "lint": "eslint ./src && prettier --check .",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "amqplib": "^0.10.3",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "eslint": "^8.46.0",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0"
   }
