Use more env variables

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 CRAWLER_INPUT_QUEUE=crawler_input
 CRAWLER_OUTPUT_QUEUE=crawler_output
+API_PORT=3000
+RABBITMQ_URI=amqp://rabbitmq:5672/
+ELASTIC_SEARCH_URI=http://elasticsearch:9200
+REDIS_HOST=redis
+REDIS_PORT=6379
+EXTRATO_CLUBE_API=http://extratoblubeapp-env.eba-mvegshhd.sa-east0.elasticbeanstalk.com
