--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,24 @@ services:
     environment:
       - CRAWLER_INPUT_QUEUE=${CRAWLER_INPUT_QUEUE}
       - CRAWLER_OUTPUT_QUEUE=${CRAWLER_OUTPUT_QUEUE}
+      - RABBITMQ_URI=${RABBITMQ_URI}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - EXTRATO_CLUBE_API=${EXTRATO_CLUBE_API}
   api:
     build:
       context: ./api
     ports:
-      - '3000:3000'
+      - '3000:${API_PORT}'
     depends_on:
       - rabbitmq
       - elasticsearch
     environment:
       - CRAWLER_INPUT_QUEUE=${CRAWLER_INPUT_QUEUE}
       - CRAWLER_OUTPUT_QUEUE=${CRAWLER_OUTPUT_QUEUE}
+      - API_PORT=${API_PORT}
+      - RABBITMQ_URI=${RABBITMQ_URI}
+      - ELASTIC_SEARCH_URI=${ELASTIC_SEARCH_URI}
   frontend:
     build:
       context: ./frontend
