--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@elastic/elasticsearch": "^7.10.0",
     "amqplib": "^0.10.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1"
   }
 }
